fix: icon alignment & matrix undersize svg

--- a/style.css
+++ b/style.css
@@ -157,8 +157,11 @@ a {
 
 .socials {
   gap: 24px;
-  flex-wrap: wrap;
   display: flex;
+}
+
+a.socials {
+  align-items: center;
 }
 
 .medias-group {
@@ -206,11 +209,14 @@ a {
 
 .darker-gray {
   color: #424242;
+  display: flex;
+  align-items: center;
 }
 
 .darker-gray-svg {
   filter: invert(27%) sepia(5%) saturate(0%) hue-rotate(236deg) brightness(90%)
     contrast(95%);
+    margin-top: 2px;
 }
 
 .logo-icon {
